Sun Jul 29 10:50:45 2001  Ossama Othman  <ossama@uci.edu>

	* ace/Svc_Conf_Lexer_Guard.cpp: 

	  There is no longer any need to include "ace/Object_Manager.h"

	* ace/Service_Config.cpp:

	  Include "ace/Object_Manager.h" to pull in the definition of
	  ACE_Static_Object_Lock.  Fixes a problem found in Sun builds and
	  single-threaded builds.

Sat Jul 28 23:03:24 2001  Ossama Othman  <ossama@uci.edu>

	The following are changes that make the Service Configurator
	reentrant and thread-safe.

	* ace/Svc_Conf.y:

	  Generate a pure (reentrant) parser using Bison.  BYACC doesn't
	  support generation of reentrant parsers.

	* ace/Svc_Conf.l:

	  Implemented "buffer stack" support.  This feature makes it
	  possible to process Service Configurator directives within a
	  Service Object's init() method, i.e. support nested directive
	  processing.

	  (ace_yyerrno):

	  Moved declaration of ace_yyerrno from this file to
	  `Svc_Conf.y'.  ace_yyerrno was not used in the generated
	  scanner.  It was only used in the generated parser.

	  (yy_delete_parse_buffer):

	  There is no longer any need for this function.  The lexer buffer
	  stack implementation handles memory management of lexer buffers.

	  (yywrap):

	  Do not call yy_delete_parse_buffer().  It is no longer necessary
	  to do so, in addition to the fact that that function was
	  removed (as described above).

	  (<<EOF>>):

	  Do not call ACE_YY_NEW_FILE in this rule.  The new buffer stack
	  implementation handles the buffer switching that ACE_YY_NEW_FILE
	  did, and more.

	* ace/Svc_Conf_Tokens.h:
	* ace/Svc_Conf_l.cpp:
	* ace/Svc_Conf_y.cpp:

	  Regenerated these files using updated Bison/YACC and FLEX input
	  files to pull in support for reentrant parsing and nested
	  processing of Service Configurator directives.

	* ace/Svc_Conf.h (ace_yy_push_buffer, ace_yy_pop_buffer):

	  Added function prototypes for the newly implemented lexer buffer
	  stack manipulation functions.

	  (ace_yylex):
